--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "byline": "^5.0.0",
     "colors": "git+https://github.com/djulien/colors.js.git",
     "jison": "^0.4.18",
-    "through2": "^2.0.3"
+    "through2": "^2.0.3",
+    "to-ast": "^1.0.0"
   }
 }
