--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "byline": "^5.0.0",
     "colors": "git+https://github.com/djulien/colors.js.git",
+    "duplex-stream": "^0.1.0",
     "jison": "^0.4.18",
     "through2": "^2.0.3",
     "to-ast": "^1.0.0"
