--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "license": "TBD",
   "dependencies": {
     "byline": "^5.0.0",
+    "capture-console": "^1.0.1",
     "colors": "git+https://github.com/djulien/colors.js.git",
     "duplex-stream": "^0.1.0",
     "jison": "^0.4.18",
+    "require-from-string": "^2.0.2",
     "through2": "^2.0.3",
     "to-ast": "^1.0.0"
   }
