--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "byline": "^5.0.0",
     "capture-console": "^1.0.1",
     "colors": "git+https://github.com/djulien/colors.js.git",
+    "combined-stream2": "^1.1.2",
     "duplex-stream": "^0.1.0",
     "jison": "^0.4.18",
     "json5": "^1.0.1",
